# nanoeigenpy

./: .gersemirc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  flake.nix  package.xml  pixi.toml
.github/workflows/: macos-linux-windows-pixi.yml  nix.yml  ros_ci.yml  update_pixi_lockfile.yml
cmake/: get-jrl-cmakemodules.cmake
development/scripts/pixi/: activation.bat  activation.sh
include/nanoeigenpy/: computation-info.hpp  decompositions.hpp  eigen-typedef.hpp  fwd.hpp  geometry.hpp  id.hpp  nanoeigenpy.hpp  solvers.hpp
include/nanoeigenpy/decompositions/: ColPivHouseholderQR.hpp  CompleteOrthogonalDecomposition.hpp  EigenSolver.hpp  FullPivHouseholderQR.hpp  HouseholderQR.hpp  PermutationMatrix.hpp  SelfAdjointEigenSolver.hpp  base.hpp  bdcsvd.hpp  col-piv-householder-qr.hpp  complete-orthogonal-decomposition.hpp  complex-eigen-solver.hpp  complex-schur.hpp  eigen-solver.hpp  full-piv-householder-qr.hpp  full-piv-lu.hpp  generalized-eigen-solver.hpp  generalized-self-adjoint-eigen-solver.hpp  hessenberg-decomposition.hpp  householder-qr.hpp  jacobi-svd.hpp  jacobi_svd.hpp  ldlt.hpp  llt.hpp  minres.hpp  minres_prev.hpp  partial-piv-lu.hpp  permutation-matrix.hpp  real-qz.hpp  real-schur.hpp  self-adjoint-eigen-solver.hpp  svd-base.hpp  tridiagonalization.hpp
include/nanoeigenpy/decompositions/sparse/: SimplicialCholesky.hpp  SparseSolverBase.hpp  ldlt.hpp  llt.hpp  simplicial-cholesky.hpp  simplicial-ldlt.hpp  simplicial-llt.hpp  sparse-lu.hpp  sparse-qr.hpp  sparse-solver-base.hpp
include/nanoeigenpy/decompositions/sparse/accelerate/: accelerate.hpp
include/nanoeigenpy/decompositions/sparse/cholmod/: CholmodBase.hpp  CholmodDecomposition.hpp  CholmodSimplicialLDLT.hpp  CholmodSimplicialLLT.hpp  CholmodSupernodalLLT.hpp  cholmod-base.hpp  cholmod-decomposition.hpp  cholmod-simplicial-ldlt.hpp  cholmod-simplicial-llt.hpp  cholmod-supernodal-llt.hpp
include/nanoeigenpy/geometry/: angle-axis.hpp  hyperplane.hpp  jacobi-rotation.hpp  parametrized-line.hpp  quaternion.hpp  rotation-2d.hpp  scaling.hpp  transform.hpp  translation.hpp
include/nanoeigenpy/geometry/detail/: rotation-base.hpp
include/nanoeigenpy/solvers/: basic-preconditioners.hpp  bfgs-preconditioners.hpp  conjugate-gradient.hpp  incomplete-cholesky.hpp  incomplete-lut.hpp  iterative-solver-base.hpp  least-squares-conjugate-gradient.hpp  least-squares-conjugate_gradient.hpp  minres.hpp  sparse-solver-base.hpp
include/nanoeigenpy/utils/: helpers.hpp  is-approx.hpp
src/: module.cpp  solvers.cpp
src/nanoeigenpy/: module.cpp
src/nanoeigenpy/decompositions/: ldlt.hpp  llt.hpp
tests/: CMakeLists.txt  quaternion.cpp  test_accelerate.py  test_bdcsvd.py  test_complex_eigen_solver.py  test_complex_schur.py  test_eigen_solver.py  test_full_piv_lu.py  test_generalized_eigen_solver.py  test_generalized_self_adjoint_eigen_solver.py  test_geometry.py  test_hessenberg_decomposition.py  test_incomplete_cholesky.py  test_incomplete_lut.py  test_iterative_solvers.py  test_jacobi_svd.py  test_ldlt.py  test_llt.py  test_minres.py  test_partial_piv_lu.py  test_permutation_matrix.py  test_qr.py  test_quaternion.py  test_real_qz.py  test_real_schur.py  test_self_adjoint_eigen_solver.py  test_simplicial_llt.py  test_sparse_lu.py  test_sparse_qr.py  test_tridiagonalization.py
tests/decompositions/sparse/: test_SimplicialLLT.py
tests/packaging/cmake/: CMakeLists.txt
tests/python/: test_QR.py  test_eigen_solver.py  test_geometry.py  test_ldlt.py  test_llt.py  test_minres.py  test_permutation_matrix.py  test_qr.py  test_quaternion.py
